// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Item component 1`] = `
<p>
  <span
    className="bg-danger-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-exclamation-circle text-danger"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#exclamation-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    (resolved-overdue)
  </span>
</p>
`;

exports[`Should render Item component onTime 1`] = `
<p>
  <span
    className="bg-success-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-check-circle text-success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#check-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    (resolved-overdue)
  </span>
</p>
`;

exports[`Should render Item component status Paused 1`] = `
<p>
  <span
    className="bg-success-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-check-circle text-success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#check-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    (sla-paused)
  </span>
</p>
`;

exports[`Should render Item component status Running 1`] = `
<p>
  <span
    className="bg-success-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-check-circle text-success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#check-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    Jun 20, 5:09 PM (2d 00h 00min left)
  </span>
</p>
`;

exports[`Should render Item component status Running and overdue 1`] = `
<p>
  <span
    className="bg-danger-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-exclamation-circle text-danger"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#exclamation-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    Jun 20, 5:09 PM (2d 00h 00min overdue)
  </span>
</p>
`;

exports[`Should render Item component status Stopped 1`] = `
<p>
  <span
    className="bg-success-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-check-circle text-success"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#check-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    (resolved-on-time)
  </span>
</p>
`;

exports[`Should render Item component status Stopped overdue 1`] = `
<p>
  <span
    className="bg-danger-light sticker"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
  >
    <span
      className="inline-item"
      style={
        Object {
          "fontSize": "10px",
        }
      }
    >
      <svg
        className="lexicon-icon lexicon-icon-exclamation-circle text-danger"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#exclamation-circle\\" />",
          }
        }
        focusable="false"
        role="presentation"
      />
    </span>
  </span>
  <span
    className="font-weight-medium small text-secondary"
  >
     test 
  </span>
  <span
    className="small"
  >
    (resolved-overdue)
  </span>
</p>
`;

exports[`Should render SectionAttribute component 1`] = `
<p
  className="row"
>
  <span
    className="col-2 font-weight-medium small text-secondary"
  >
    test 
  </span>
  <span
    className="col small"
  >
    test
  </span>
</p>
`;

exports[`Should render SectionSubTitle component 1`] = `
<h5
  className="font-weight-medium mb-4 mt-4 text-secondary"
>
  <span>
    test
  </span>
</h5>
`;

exports[`Should render component 1`] = `
<div
  aria-labelledby="instanceDetailModalLabel"
  className="fade modal"
  id="instanceDetailModal"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-dialog modal-lg"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <div
          className="font-weight-medium modal-title"
          id="instanceDetailModalLabel"
        >
          <span
            className="modal-title-indicator text-info"
          >
            <svg
              className="lexicon-icon lexicon-icon-hr"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                }
              }
              focusable="false"
              role="presentation"
            />
          </span>
          item #undefined
        </div>
        <button
          aria-labelledby="Close"
          className="close"
          data-dismiss="modal"
          role="button"
          type="button"
        >
          <svg
            className="lexicon-icon lexicon-icon-times"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
              }
            }
            focusable="false"
            role="presentation"
          />
        </button>
      </div>
      <div
        className="modal-body"
      >
        <h4
          className=" font-weight-medium mb-4"
        >
          due-date-by-sla
        </h4>
        <p>
          <span
            className="font-weight-medium text-muted"
          >
            no-sla-records-for-this-item
          </span>
        </p>
        <h4
          className="mt-5 font-weight-medium mb-4"
        >
          process-details
        </h4>
        <p
          className="row"
        >
          <span
            className="col-2 font-weight-medium small text-secondary"
          >
            process-status 
          </span>
          <span
            className="col small"
          />
        </p>
        <p
          className="row"
        >
          <span
            className="col-2 font-weight-medium small text-secondary"
          >
            created-by 
          </span>
          <span
            className="col small"
          />
        </p>
        <p
          className="row"
        >
          <span
            className="col-2 font-weight-medium small text-secondary"
          >
            asset-type 
          </span>
          <span
            className="col small"
          />
        </p>
        <p
          className="row"
        >
          <span
            className="col-2 font-weight-medium small text-secondary"
          >
            asset-title 
          </span>
          <span
            className="col small"
          />
        </p>
        <p
          className="row"
        >
          <span
            className="col-2 font-weight-medium small text-secondary"
          >
            current-step 
          </span>
          <span
            className="col small"
          >
            
          </span>
        </p>
        <a
          className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
          href="/group/control_panel/manage/-/workflow_instance/view/undefined"
          target="_blank"
        >
          go-to-submission-page
          <span
            className="inline-item inline-item-after"
          >
            <svg
              className="lexicon-icon lexicon-icon-shortcut"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                }
              }
              focusable="false"
              role="presentation"
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should test componentWillReceiveProps 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceItemDetail
        instanceId="123"
        processId="123"
      >
        <div
          aria-labelledby="instanceDetailModalLabel"
          className="fade modal"
          id="instanceDetailModal"
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <div
                  className="font-weight-medium modal-title"
                  id="instanceDetailModalLabel"
                >
                  <span
                    className="modal-title-indicator text-info"
                  >
                    <Icon
                      iconName="hr"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-hr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                  item #123
                </div>
                <button
                  aria-labelledby="Close"
                  className="close"
                  data-dismiss="modal"
                  role="button"
                  type="button"
                >
                  <Icon
                    iconName="times"
                  >
                    <svg
                      className="lexicon-icon lexicon-icon-times"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
                        }
                      }
                      focusable="false"
                      role="presentation"
                    />
                  </Icon>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <Component>
                  <h4
                    className=" font-weight-medium mb-4"
                  >
                    due-date-by-sla
                  </h4>
                </Component>
                <p>
                  <span
                    className="font-weight-medium text-muted"
                  >
                    no-sla-records-for-this-item
                  </span>
                </p>
                <Component
                  className="mt-5"
                >
                  <h4
                    className="mt-5 font-weight-medium mb-4"
                  >
                    process-details
                  </h4>
                </Component>
                <Component
                  description="process-status"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      process-status 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="created-by"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      created-by 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-type"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-type 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-title"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-title 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="current-step"
                  detail=""
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      current-step 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <a
                  className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
                  href="/group/control_panel/manage/-/workflow_instance/view/123"
                  target="_blank"
                >
                  go-to-submission-page
                  <span
                    className="inline-item inline-item-after"
                  >
                    <Icon
                      iconName="shortcut"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-shortcut"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </InstanceItemDetail>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should test render with status OnTime 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceItemDetail
        instanceId="123"
        processId="123"
      >
        <div
          aria-labelledby="instanceDetailModalLabel"
          className="fade modal"
          id="instanceDetailModal"
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <div
                  className="font-weight-medium modal-title"
                  id="instanceDetailModalLabel"
                >
                  <span
                    className="modal-title-indicator text-info"
                  >
                    <Icon
                      iconName="hr"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-hr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                  item #123
                </div>
                <button
                  aria-labelledby="Close"
                  className="close"
                  data-dismiss="modal"
                  role="button"
                  type="button"
                >
                  <Icon
                    iconName="times"
                  >
                    <svg
                      className="lexicon-icon lexicon-icon-times"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
                        }
                      }
                      focusable="false"
                      role="presentation"
                    />
                  </Icon>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <Component>
                  <h4
                    className=" font-weight-medium mb-4"
                  >
                    due-date-by-sla
                  </h4>
                </Component>
                <p>
                  <span
                    className="font-weight-medium text-muted"
                  >
                    no-sla-records-for-this-item
                  </span>
                </p>
                <Component
                  className="mt-5"
                >
                  <h4
                    className="mt-5 font-weight-medium mb-4"
                  >
                    process-details
                  </h4>
                </Component>
                <Component
                  description="process-status"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      process-status 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="created-by"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      created-by 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-type"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-type 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-title"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-title 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="current-step"
                  detail=""
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      current-step 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <a
                  className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
                  href="/group/control_panel/manage/-/workflow_instance/view/123"
                  target="_blank"
                >
                  go-to-submission-page
                  <span
                    className="inline-item inline-item-after"
                  >
                    <Icon
                      iconName="shortcut"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-shortcut"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </InstanceItemDetail>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should test render with status OnTime 2`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceItemDetail
        instanceId="123"
        processId="123"
      >
        <div
          aria-labelledby="instanceDetailModalLabel"
          className="fade modal"
          id="instanceDetailModal"
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <div
                  className="font-weight-medium modal-title"
                  id="instanceDetailModalLabel"
                >
                  <span
                    className="modal-title-indicator text-info"
                  >
                    <Icon
                      iconName="hr"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-hr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                  item #123
                </div>
                <button
                  aria-labelledby="Close"
                  className="close"
                  data-dismiss="modal"
                  role="button"
                  type="button"
                >
                  <Icon
                    iconName="times"
                  >
                    <svg
                      className="lexicon-icon lexicon-icon-times"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
                        }
                      }
                      focusable="false"
                      role="presentation"
                    />
                  </Icon>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <Component>
                  <h4
                    className=" font-weight-medium mb-4"
                  >
                    due-date-by-sla
                  </h4>
                </Component>
                <p>
                  <span
                    className="font-weight-medium text-muted"
                  >
                    no-sla-records-for-this-item
                  </span>
                </p>
                <Component
                  className="mt-5"
                >
                  <h4
                    className="mt-5 font-weight-medium mb-4"
                  >
                    process-details
                  </h4>
                </Component>
                <Component
                  description="process-status"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      process-status 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="created-by"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      created-by 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-type"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-type 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-title"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-title 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="current-step"
                  detail=""
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      current-step 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <a
                  className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
                  href="/group/control_panel/manage/-/workflow_instance/view/123"
                  target="_blank"
                >
                  go-to-submission-page
                  <span
                    className="inline-item inline-item-after"
                  >
                    <Icon
                      iconName="shortcut"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-shortcut"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </InstanceItemDetail>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should test render with status OnTime 3`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceItemDetail
        instanceId="123"
        processId="123"
      >
        <div
          aria-labelledby="instanceDetailModalLabel"
          className="fade modal"
          id="instanceDetailModal"
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <div
                  className="font-weight-medium modal-title"
                  id="instanceDetailModalLabel"
                >
                  <span
                    className="modal-title-indicator text-info"
                  >
                    <Icon
                      iconName="hr"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-hr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                  item #123
                </div>
                <button
                  aria-labelledby="Close"
                  className="close"
                  data-dismiss="modal"
                  role="button"
                  type="button"
                >
                  <Icon
                    iconName="times"
                  >
                    <svg
                      className="lexicon-icon lexicon-icon-times"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
                        }
                      }
                      focusable="false"
                      role="presentation"
                    />
                  </Icon>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <Component>
                  <h4
                    className=" font-weight-medium mb-4"
                  >
                    due-date-by-sla
                  </h4>
                </Component>
                <p>
                  <span
                    className="font-weight-medium text-muted"
                  >
                    no-sla-records-for-this-item
                  </span>
                </p>
                <Component
                  className="mt-5"
                >
                  <h4
                    className="mt-5 font-weight-medium mb-4"
                  >
                    process-details
                  </h4>
                </Component>
                <Component
                  description="process-status"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      process-status 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="created-by"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      created-by 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-type"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-type 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-title"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-title 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="current-step"
                  detail=""
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      current-step 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <a
                  className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
                  href="/group/control_panel/manage/-/workflow_instance/view/123"
                  target="_blank"
                >
                  go-to-submission-page
                  <span
                    className="inline-item inline-item-after"
                  >
                    <Icon
                      iconName="shortcut"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-shortcut"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </InstanceItemDetail>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should test render with status OnTime 4`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceItemDetail
        instanceId="123"
        processId="123"
      >
        <div
          aria-labelledby="instanceDetailModalLabel"
          className="fade modal"
          id="instanceDetailModal"
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <div
                  className="font-weight-medium modal-title"
                  id="instanceDetailModalLabel"
                >
                  <span
                    className="modal-title-indicator text-info"
                  >
                    <Icon
                      iconName="hr"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-hr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                  item #123
                </div>
                <button
                  aria-labelledby="Close"
                  className="close"
                  data-dismiss="modal"
                  role="button"
                  type="button"
                >
                  <Icon
                    iconName="times"
                  >
                    <svg
                      className="lexicon-icon lexicon-icon-times"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
                        }
                      }
                      focusable="false"
                      role="presentation"
                    />
                  </Icon>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <Component>
                  <h4
                    className=" font-weight-medium mb-4"
                  >
                    due-date-by-sla
                  </h4>
                </Component>
                <p>
                  <span
                    className="font-weight-medium text-muted"
                  >
                    no-sla-records-for-this-item
                  </span>
                </p>
                <Component
                  className="mt-5"
                >
                  <h4
                    className="mt-5 font-weight-medium mb-4"
                  >
                    process-details
                  </h4>
                </Component>
                <Component
                  description="process-status"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      process-status 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="created-by"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      created-by 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-type"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-type 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-title"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-title 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="current-step"
                  detail=""
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      current-step 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <a
                  className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
                  href="/group/control_panel/manage/-/workflow_instance/view/123"
                  target="_blank"
                >
                  go-to-submission-page
                  <span
                    className="inline-item inline-item-after"
                  >
                    <Icon
                      iconName="shortcut"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-shortcut"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </InstanceItemDetail>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should test render with status OnTime 5`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "search": undefined,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "search": undefined,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "search": undefined,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <InstanceItemDetail
        instanceId="123"
        processId="123"
      >
        <div
          aria-labelledby="instanceDetailModalLabel"
          className="fade modal"
          id="instanceDetailModal"
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <div
                  className="font-weight-medium modal-title"
                  id="instanceDetailModalLabel"
                >
                  <span
                    className="modal-title-indicator text-info"
                  >
                    <Icon
                      iconName="hr"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-hr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#hr\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                  item #123
                </div>
                <button
                  aria-labelledby="Close"
                  className="close"
                  data-dismiss="modal"
                  role="button"
                  type="button"
                >
                  <Icon
                    iconName="times"
                  >
                    <svg
                      className="lexicon-icon lexicon-icon-times"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#times\\" />",
                        }
                      }
                      focusable="false"
                      role="presentation"
                    />
                  </Icon>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <Component>
                  <h4
                    className=" font-weight-medium mb-4"
                  >
                    due-date-by-sla
                  </h4>
                </Component>
                <p>
                  <span
                    className="font-weight-medium text-muted"
                  >
                    no-sla-records-for-this-item
                  </span>
                </p>
                <Component
                  className="mt-5"
                >
                  <h4
                    className="mt-5 font-weight-medium mb-4"
                  >
                    process-details
                  </h4>
                </Component>
                <Component
                  description="process-status"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      process-status 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="created-by"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      created-by 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-type"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-type 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="asset-title"
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      asset-title 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <Component
                  description="current-step"
                  detail=""
                >
                  <p
                    className="row"
                  >
                    <span
                      className="col-2 font-weight-medium small text-secondary"
                    >
                      current-step 
                    </span>
                    <span
                      className="col small"
                    />
                  </p>
                </Component>
                <a
                  className="btn btn-secondary btn-sm mb-1 font-weight-medium mt-3"
                  href="/group/control_panel/manage/-/workflow_instance/view/123"
                  target="_blank"
                >
                  go-to-submission-page
                  <span
                    className="inline-item inline-item-after"
                  >
                    <Icon
                      iconName="shortcut"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-shortcut"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#shortcut\\" />",
                          }
                        }
                        focusable="false"
                        role="presentation"
                      />
                    </Icon>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </InstanceItemDetail>
    </Router>
  </MemoryRouter>
</MockRouter>
`;
